--- a/Irrigation_system/templates/register.html
+++ b/Irrigation_system/templates/register.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="container bg-secondary">
+<div class="container">
     <br>
     <br>
     <br>
