--- a/Irrigation_system/templates/accounts.html
+++ b/Irrigation_system/templates/accounts.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
+<section class="page-section">
     <div class="content-section">
       <div class="media">
         <img class="rounded-circle account-img" src="{{ image_file }}">
@@ -54,4 +55,5 @@
             </div>
         </form>
     </div>
+</section>
 {% endblock content %}
