--- a/Irrigation_system/templates/layout.html
+++ b/Irrigation_system/templates/layout.html
@@ -21,7 +21,8 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
     </head>
-    <body id="page-top">
+    <body>
+        <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
                 <a class="navbar-brand" href="{{url_for('home')}}"><img src="static/img/navbar-logo.svg" alt="..." /> Smart Irrigation</a>
@@ -45,6 +46,7 @@
                             <li class="nav-item"><a class="nav-link" href="{{ url_for('register')}}">Register</a></li>
                         {% endif %}
                         <li class="nav-item"><a class="nav-link" href="{{ url_for('about')}}">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ url_for('contact')}}">Contact</a></li>
                     </ul>
                 </div>
             </div>
